<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DevProfileFragment" >

    <Button
        android:id="@+id/devBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="44dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="60dp"
        android:text="@string/my_details"
        app:layout_constraintBottom_toTopOf="@+id/nameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="112dp"
        android:text="@string/mikhail_hathey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myDetails" />

    <TextView
        android:id="@+id/contactNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="60dp"
        android:text="@string/contactNum"
        app:layout_constraintStart_toEndOf="@+id/phoneIcon"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/emailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="60dp"
        android:text="@string/myEmail"
        app:layout_constraintStart_toEndOf="@+id/emailIcon"
        app:layout_constraintTop_toBottomOf="@+id/contactNum" />

    <TextView
        android:id="@+id/twitterHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="54dp"
        android:text="@string/twitterHandle"
        app:layout_constraintBottom_toTopOf="@+id/linkedInId"
        app:layout_constraintStart_toEndOf="@+id/twitterIcon"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

    <TextView
        android:id="@+id/linkedInId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="55dp"
        android:text="@string/linkedInId"
        app:layout_constraintStart_toEndOf="@+id/linkedInIcon"
        app:layout_constraintTop_toBottomOf="@+id/twitterHandle" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/usericon"
        android:src="@drawable/user"
        app:layout_constraintBottom_toTopOf="@+id/phoneIcon"
        app:layout_constraintEnd_toStartOf="@+id/nameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devBackBtn"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/phoneicon"
        android:src="@drawable/phone"
        app:layout_constraintBottom_toTopOf="@+id/emailIcon"
        app:layout_constraintEnd_toStartOf="@+id/contactNum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIcon" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/emailicon"
        android:src="@drawable/mail"
        app:layout_constraintBottom_toTopOf="@+id/twitterIcon"
        app:layout_constraintEnd_toStartOf="@+id/emailTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneIcon"
        app:srcCompat="@drawable/mail" />

    <ImageView
        android:id="@+id/twitterIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/twittericon"
        android:src="@drawable/twitter"
        app:layout_constraintBottom_toTopOf="@+id/linkedInIcon"
        app:layout_constraintEnd_toStartOf="@+id/twitterHandle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailIcon"
        app:srcCompat="@drawable/twitter" />

    <ImageView
        android:id="@+id/linkedInIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="152dp"
        android:contentDescription="@string/linkedinicon"
        android:src="@drawable/linkedin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linkedInId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twitterIcon"
        app:srcCompat="@drawable/linkedin" />

</androidx.constraintlayout.widget.ConstraintLayout>