<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcFragment">

    <Button
        android:id="@+id/calcBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="272dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="26dp"
        android:text="@string/which_of_the_3_numbers_are_greater_or_less_than_the_other"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcBackBtn"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_3_numbers_below"
        app:layout_constraintBottom_toTopOf="@+id/num1input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCalc"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="53dp"
        android:text="@string/press_to_calculate"
        app:layout_constraintBottom_toTopOf="@+id/calcResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num3input" />

    <TextView
        android:id="@+id/calcResults"
        android:layout_width="336dp"
        android:layout_height="206dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/num1input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:inputType="number"
        android:text="@string/enter_1st_number"
        app:layout_constraintBottom_toTopOf="@+id/num2input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/num2input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="12dp"
        android:inputType="number"
        android:text="@string/enter_2nd_number"
        app:layout_constraintBottom_toTopOf="@+id/num3input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1input"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <EditText
        android:id="@+id/num3input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="12dp"
        android:inputType="number"
        android:text="@string/enter_3rd_number"
        app:layout_constraintBottom_toTopOf="@+id/calcButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2input"
        tools:ignore="LabelFor"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>