<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <Button
        android:id="@+id/aboutBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="138dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/profileText"
        app:layout_constraintEnd_toStartOf="@+id/profileImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="24dp"
        android:text="@string/my_profile"
        app:layout_constraintBottom_toTopOf="@+id/profileText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileText"
        android:layout_width="368dp"
        android:layout_height="477dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:clickable="false"
        android:contentDescription="@string/my_profile"
        android:ems="10"
        android:gravity="start|top"
        android:text="@string/profileTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myProfile"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="146dp"
        android:layout_height="131dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="66dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/my_profile"
        app:layout_constraintBottom_toTopOf="@+id/profileText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/aboutBackBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mikhailpic"
        tools:src="@drawable/mikhailpic" />

</androidx.constraintlayout.widget.ConstraintLayout>